--- a/templates/hello.html
+++ b/templates/hello.html
@@ -1,11 +1,20 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
-</head>
-<body>
-    <h1>Hello world, tu ip es {{user_ip}}</h1>
-</body>
-</html>
+{% extends 'base.html' %}
+{% import 'macros.html' as macros %}
+{% block title %}
+    {{ super() }}
+    Bienvenido 
+{% endblock %}
+
+{% block content %}
+    {% if  user_ip %}
+        <h1>Hello world, tu ip es {{user_ip}}</h1>
+    {% else %}
+        <a href="{{ url_for('index')}}"> ir al inicio</a>
+    {% endif %}
+
+    <ul>
+        {% for todo in todos %}
+            {{ macros.render_todo(todo) }}
+        {% endfor %}
+    </ul>
+{% endblock %} 
