--- a/templates/base.html
+++ b/templates/base.html
@@ -1,18 +1,17 @@
-<!DOCTYPE html>
-<html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% extends 'bootstrap/base.html' %}
+
+{% block head %}
+    {{ super() }}
     <title>
         {%block title %}Flask Platzi | {% endblock %} 
     </title>
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
-</head>
-<header>
-    {% include 'navbar.html' %}
-</header>
-<body>
-   {% block content %}
-   {% endblock %} 
-</body>
-</html>
+{% endblock %}
+
+{% block body %}
+    {% block navbar%}
+        {% include 'navbar.html' %}
+    {% endblock %}
+
+   {% block content %} {% endblock %} 
+{% endblock %}
